# telegram-signature-bot

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
telegram_signature_bot/: __init__.py  bot.py  database.py  main.py
tests/: __init__.py  test_bot.py  test_database.py
